--- a/MauiAndroidListViewBug.csproj
+++ b/MauiAndroidListViewBug.csproj
@@ -14,17 +14,17 @@
 		<!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
 
 		<OutputType>Exe</OutputType>
-		<RootNamespace>MauiAndroidScrollViewBug</RootNamespace>
+		<RootNamespace>MauiAndroidListViewBug</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
-		<ApplicationTitle>MauiAndroidScrollViewBug</ApplicationTitle>
+		<ApplicationTitle>MauiAndroidListViewBug</ApplicationTitle>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.mauiandroidscrollviewbug</ApplicationId>
+		<ApplicationId>com.companyname.mauiandroidListViewBug</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
